Bug 505430 - Earth Science (USRA) Picture of the Day plugin broken
Summary: Earth Science (USRA) Picture of the Day plugin broken
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Picture of the Day wallpaper (other bugs)
Version First Reported In: 6.3.5
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-06-10 13:52 UTC by Kat Pavlu
Modified: 2025-06-17 22:37 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kat Pavlu 2025-06-10 13:52:40 UTC
SUMMARY
Earth Science POTD does not load. The wallpaper is solid black and there is no description loaded in the UI.

Possible cause: today's EPOD post includes more than one picture (https://epod.usra.edu), although I remember this being broken on other days too. Probably worth it to recheck tomorrow.

STEPS TO REPRODUCE
1. Set Earth Science (USRA) Picture of the day wallpaper


SOFTWARE/OS VERSIONS
Operating System: Fedora Linux 42
KDE Plasma Version: 6.3.5
KDE Frameworks Version: 6.14.0
Qt Version: 6.9.0
Kernel Version: 6.14.9-300.fc42.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 8 × AMD Ryzen 7 PRO 3700U w/ Radeon Vega Mobile Gfx
Memory: 13.5 GiB of RAM
Graphics Processor: AMD Radeon Vega 10 Graphics
Manufacturer: LENOVO
Product Name: 20NKS52L02
System Version: ThinkPad T495
Comment 1 Nate Graham 2025-06-10 15:36:41 UTC
Can confirm.

Given the ongoing political turmoil in USA government agencies, I would suspect we can't count on the this provider working well going forward, and recommend removing it.
Comment 2 Bug Janitor Service 2025-06-12 17:48:53 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kdeplasma-addons/-/merge_requests/869
Comment 3 Kat Pavlu 2025-06-17 22:20:51 UTC
Git commit a4ed8fbebc7151c77a2c3b5c4bdc04f29733cb6d by Kat Pavlů.
Committed on 16/06/2025 at 13:05.
Pushed by ngraham into branch 'master'.

Fix regexp in EPOD POTD provider

M  +4    -4    wallpapers/potd/plugins/providers/epodprovider.cpp

https://invent.kde.org/plasma/kdeplasma-addons/-/commit/a4ed8fbebc7151c77a2c3b5c4bdc04f29733cb6d
Comment 4 Nate Graham 2025-06-17 22:37:29 UTC
Git commit d9d379f9ad05bfd5d659066f44d7bc625e39c8b4 by Nate Graham.
Committed on 17/06/2025 at 22:21.
Pushed by ngraham into branch 'Plasma/6.4'.

Fix regexp in EPOD POTD provider


(cherry picked from commit a4ed8fbebc7151c77a2c3b5c4bdc04f29733cb6d)

Co-authored-by: Kat Pavlů <realkpavel@gmail.com>

M  +4    -4    wallpapers/potd/plugins/providers/epodprovider.cpp

https://invent.kde.org/plasma/kdeplasma-addons/-/commit/d9d379f9ad05bfd5d659066f44d7bc625e39c8b4