Fix regexp in EPOD POTD provider

BUG: 505430


(cherry picked from commit a4ed8fbebc7151c77a2c3b5c4bdc04f29733cb6d)

Co-authored-by: Kat Pavlů <realkpavel@gmail.com>