wallpapers/potd/plugins/providers/epodprovider.cpp
@@ -32,8 +32,8 @@ void EpodProvider::pageRequestFinished(KJob *_job)
 
     const QString data = QString::fromUtf8(job->data()).simplified();
 
-    const QString pattern = QStringLiteral("://epod.usra.edu/.a/*-pi");
-    const auto exp = QRegularExpression(QRegularExpression::wildcardToRegularExpression(pattern));
+    const auto exp = QRegularExpression("://epod\\.usra\\.edu/\\.a/.*-pi");
+
     const auto expMatch = exp.match(data);
 
     if (expMatch.hasMatch()) {
@@ -66,8 +66,8 @@ void EpodProvider::pageRequestFinished(KJob *_job)
         return;
     }
 
-    int pos = expMatch.capturedStart() + pattern.length();
-    const QString sub = data.mid(pos - 4, pattern.length() + 10);
+    int pos = expMatch.capturedStart() + 20;
+    const QString sub = data.mid(pos, 34);
     m_remoteUrl = QUrl(QStringLiteral("https://epod.usra.edu/.a/%1-pi").arg(sub));
 
     KIO::StoredTransferJob *imageJob = KIO::storedGet(m_remoteUrl, KIO::NoReload, KIO::HideProgressInfo);
